[package]
name = "rust_verkle_crypto_api"
version = "0.1.0"
description = "Rust Verkle Crypto API Library"
license = "Apache-2.0"
authors = ["Dragan Pilipovic <draganpilipovic1997bp@gmail.com>"]
repository = "https://github.com/dragan223/rust-verkle-crypto-api"
edition = "2021"

[dependencies]
ipa-multipoint = { git = "https://github.com/crate-crypto/ipa_multipoint", branch = "banderwagon_migration" }
banderwagon = { git = "https://github.com/crate-crypto/banderwagon" }
ark-ff = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
hex = "0.4.3"
num-bigint = "0.4.4"